testing multiple languages, equations and highlightings with dummy posts

--- a/about.html
+++ b/about.html
@@ -23,35 +23,35 @@
         <div id="header">
             <nav style="margin-left: 0.2ex">
                 <ul>
-                    <li><a href="index.html">home</a></li>
-                    <li><a href="thoughts.html">thoughts</a></li>
+                    <li><a href="index.html" data-i18n="nav.home">home</a></li>
+                    <li><a href="thoughts.html" data-i18n="nav.thoughts">thoughts</a></li>
                 </ul>
             </nav>
-            <h1><span style="color: var(--highlight-first);">A</span>bout Me <a href="https://orcid.org/0009-0004-0126-6692"><img src="img/orcid.svg" style="height:1rem;"></a></h1>
+            <h1><span style="color: var(--highlight-first);">À: </span><span data-i18n="about.heading">About Me</span> <a href="https://orcid.org/0009-0004-0126-6692"><img src="img/orcid.svg" style="height:1rem;"></a></h1>
         </div>
 	    <section class="stuff paragraph" id="stuff">
-    <p>
+    <p data-i18n="about.intro" data-i18n-html="true">
         I'm a PhD student at <a href="https://www.en.aau.dk/">Aalborg University</a> working at the <a href="https://vap.aau.dk/">Visual Analysis and Perception Lab</a>. My research focuses on the geometric foundations of multimodal AI, particularly exploring how non-Euclidean spaces can better capture the hierarchical and compositional nature of visual and temporal data.
     </p>
-    <p>
+    <p data-i18n="about.background" data-i18n-html="true">
         I completed my academic training at the <a href="https://web.ub.edu/en/home">University of Barcelona</a>, where I earned a Bachelor's degree in Mathematics and two Master's degrees in Advanced Mathematics and Data Science. During my master's studies, I worked as a research assistant at the <a href="https://hupba.com/">HuPBA group</a> in Barcelona, before joining the VAP Lab at Aalborg University, where I currently pursue my PhD.
     </p>
 <p>
-<i>Research focus</i>
+<i data-i18n="about.researchFocus">Research focus</i>
 </p>
 
-<p>
+<p data-i18n="about.researchPara1">
     My work addresses a fundamental limitation in current vision-language models: they treat images and text as flat entities, ignoring their inherent compositional and hierarchical structure. Visual scenes are structured compositions where objects exist within contexts, forming spatial hierarchies. When extended to video, temporal dynamics introduce additional complexity that conventional Euclidean representations struggle to capture.
 </p>
 
-<p>
+<p data-i18n="about.researchPara2">
     I'm investigating whether hyperbolic geometry, with its natural capacity for representing hierarchies, can adequately capture the full complexity of spatio-temporal-semantic relationships in video. This includes exploring hybrid geometric approaches that might combine hyperbolic spaces for hierarchical relationships with alternative frameworks for periodic or cyclical temporal patterns.
 </p>
 </section>
 
 <section class="stuff paragraph" id="publications">
 <p>
-<i>Publications</i>
+<i data-i18n="about.publications">Publications</i>
 </p>
 
 <ul class="org-ul my-stuff">
@@ -66,10 +66,10 @@
 
 <section class="stuff paragraph" id="other">
 <p>
-<i>Beyond research</i>
+<i data-i18n="about.beyondResearch">Beyond research</i>
 </p>
 
-<p>
+<p data-i18n="about.beyondText" data-i18n-html="true">
     In my free time, I help with my family's business, <a href="https://www.insigniespujol.com/ca">Insígnies Pujol</a>, a badge and insignia manufacturing company based in Barcelona.
 </p>
 </section>
