--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div style="top:50%; position:absolute; transform: translateY(-50%);">
             <nav>
                 <ul>
-                    <li><a href="about.html">about me</a></li>
-                    <li><a href="thoughts.html">thoughts</a></li>
+                    <li><a href="about.html" data-i18n="nav.about">about me</a></li>
+                    <li><a href="thoughts.html" data-i18n="nav.thoughts">thoughts</a></li>
                 </ul>
             </nav>
 
@@ -36,14 +36,14 @@
                 <img src="img/me.jpeg" alt="Àlex Pujol Vidal" itemprop="image">
                 <h1 itemprop="name"><span style="color: var(--highlight-first);">À</span>lex<span style="font-weight: 400;margin-left:0.1ex;"> Pujol Vidal</span></h1>
                 <p>
-                    <i class="bi-geo-fill"></i> Aalborg, Denmark<br>
-                    <i class="bi-person-badge"></i> PhD Student @ Aalborg University<br>
-                    <i class="bi-lightbulb" style="color: var(--highlight-second);"></i> Mathematics ∩ AI ∩ Cognitive Science
+                    <i class="bi-geo-fill"></i> <span data-i18n="home.location">Aalborg, Denmark</span><br>
+                    <i class="bi-person-badge"></i> <span data-i18n="home.role">PhD Student @ Aalborg University</span><br>
+                    <i class="bi-lightbulb" style="color: var(--highlight-second);"></i> <span data-i18n="home.field">Mathematics ∩ AI ∩ Cognitive Science</span>
                 </p>
             </section>
             <section class="about-me paragraph" id="about-me">
-                <p itemprop="description"><i>tl;dr</i>
-                    </p><p>My research explores the geometric foundations of multimodal AI, investigating how non-Euclidean spaces can better capture the hierarchical and compositional nature of visual and temporal data. I'm working on extending vision-language models to understand complex spatio-temporal-semantic relationships in video, questioning whether hyperbolic representations alone are sufficient or if we need novel geometric frameworks for temporal reasoning.</p>
+                <p itemprop="description"><i data-i18n="home.tldr">tl;dr</i>
+                    </p><p data-i18n="home.summary">My research explores the geometric foundations of multimodal AI, investigating how non-Euclidean spaces can better capture the hierarchical and compositional nature of visual and temporal data. I'm working on extending vision-language models to understand complex spatio-temporal-semantic relationships in video, questioning whether hyperbolic representations alone are sufficient or if we need novel geometric frameworks for temporal reasoning.</p>
 
                 <p></p>
             </section>
@@ -60,7 +60,7 @@
 
                         <li><a href="mailto:alexpv@create.aau.dk" title=""><i class="bi bi-envelope-at" itemprop="sameAs" target="_blank"></i></a></li>
 
-                        <li><a href="https://substack.com/@lex1768396" title=""><i class="bi bi-substack" itemprop="sameAs" target="_blank"></i></a></li>
+                        <li><a href="https://alexpujolv.substack.com/" title=""><i class="bi bi-substack" itemprop="sameAs" target="_blank"></i></a></li>
 
                     <li>
                         <a href="https://orcid.org/0009-0004-0126-6692" target="_blank"><img src="img/orcid.svg" style="height:1rem;"></a>
