better mobile response

--- a/about.html
+++ b/about.html
@@ -73,6 +73,9 @@
     In my free time, I help with my family's business, <a href="https://www.insigniespujol.com/ca">Insígnies Pujol</a>, a badge and insignia manufacturing company based in Barcelona.
 </p>
 </section>
+<p style="margin-top: 3em; padding-top: 2em; padding-bottom: 3em; border-top: 1pt solid #ddd; color: #999; text-align: center;">
+    Libertas perfundet omnia luce
+</p>
     </div>
 
     <!-- Language Selector -->
@@ -84,12 +87,18 @@
         <span data-lang="dk">dk</span>
     </div>
 
+    <!-- Mobile Menu Toggle -->
+    <button class="mobile-menu-toggle" id="mobile-menu-toggle" aria-label="Toggle menu">
+        <i class="bi bi-three-dots-vertical"></i>
+    </button>
+
     <!-- Theme Toggle Button -->
     <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
         <i class="bi bi-moon-fill"></i>
     </button>
 
 <script src="js/language.js"></script>
+<script src="js/mobile-menu.js"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
