--- a/thoughts/post.html
+++ b/thoughts/post.html
@@ -197,12 +197,18 @@
         <span data-lang="dk">dk</span>
     </div>
 
+    <!-- Mobile Menu Toggle -->
+    <button class="mobile-menu-toggle" id="mobile-menu-toggle" aria-label="Toggle menu">
+        <i class="bi bi-three-dots-vertical"></i>
+    </button>
+
     <!-- Theme Toggle Button -->
     <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
         <i class="bi bi-moon-fill"></i>
     </button>
 
     <script src="../js/language.js"></script>
+    <script src="../js/mobile-menu.js"></script>
     <script>
         // Get the markdown file from URL parameter
         const urlParams = new URLSearchParams(window.location.search);
