--- a/thoughts.html
+++ b/thoughts.html
@@ -143,7 +143,9 @@
                 <li style="color: #999;" data-i18n="thoughts.loading">Loading posts...</li>
             </ul>
         </section>
-
+        <p style="margin-top: 3em; padding-top: 2em; padding-bottom: 3em; border-top: 1pt solid #ddd; color: #999; text-align: center;">
+            Libertas perfundet omnia luce
+        </p>
     </div>
 
     <!-- Language Selector -->
@@ -155,12 +157,18 @@
         <span data-lang="dk">dk</span>
     </div>
 
+    <!-- Mobile Menu Toggle -->
+    <button class="mobile-menu-toggle" id="mobile-menu-toggle" aria-label="Toggle menu">
+        <i class="bi bi-three-dots-vertical"></i>
+    </button>
+
     <!-- Theme Toggle Button -->
     <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
         <i class="bi bi-moon-fill"></i>
     </button>
 
 <script src="js/language.js"></script>
+<script src="js/mobile-menu.js"></script>
 <script>
     let allPosts = [];
     let selectedTags = new Set();
