--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Àlex Pujol Vidal</title>
     <meta name="description" content="Research and thoughts on artificial intelligence, machine learning, and society.">
-    <meta property="og:title" content="Àlex Pujol Vidal">
-    <meta property="og:site_name" content="Àlex Pujol Vidal">
+    <meta property="og:title" content="À">
+    <meta property="og:site_name" content="À">
     <meta property="og:locale" content="en-us">
     <meta property="og:image" content="img/me.jpeg">
     <meta property="twitter:site" content="@alexpujolv">
@@ -50,21 +50,22 @@
             <section class="social paragraph" id="social">
                 <ul class="links">
 
-                        <li><a href="https://www.linkedin.com/in/alexpujolv/" title=""><i class="bi bi-linkedin" itemprop="sameAs" target="_blank"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/alexpujolv/" title=""><i class="bi bi-linkedin" itemprop="sameAs" target="_blank"></i></a></li>
 
-                        <li><a href="https://scholar.google.com/citations?user=KtNIzQcAAAAJ&hl=ca" title=""><i class="bi bi-mortarboard-fill" itemprop="sameAs" target="_blank"></i></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=KtNIzQcAAAAJ&hl=ca" title=""><i class="bi bi-mortarboard-fill" itemprop="sameAs" target="_blank"></i></a></li>
 
-                        <li><a href="https://github.com/alex-pv01" title=""><i class="bi bi-github" itemprop="sameAs" target="_blank"></i></a></li>
+                    <li><a href="https://github.com/alex-pv01" title=""><i class="bi bi-github" itemprop="sameAs" target="_blank"></i></a></li>
 
-                        <li><a href="https://x.com/alexpujolv" title=""><i class="bi bi-twitter-x" itemprop="sameAs" target="_blank"></i></a></li>
+                    <li><a href="https://x.com/alexpujolv" title=""><i class="bi bi-twitter-x" itemprop="sameAs" target="_blank"></i></a></li>
 
-                        <li><a href="mailto:alexpv@create.aau.dk" title=""><i class="bi bi-envelope-at" itemprop="sameAs" target="_blank"></i></a></li>
+                    <li><a href="mailto:alexpv@create.aau.dk" title=""><i class="bi bi-envelope-at" itemprop="sameAs" target="_blank"></i></a></li>
 
-                        <li><a href="https://alexpujolv.substack.com/" title=""><i class="bi bi-substack" itemprop="sameAs" target="_blank"></i></a></li>
+                    <li><a href="https://alexpujolv.substack.com/" title=""><i class="bi bi-substack" itemprop="sameAs" target="_blank"></i></a></li>
 
-                    <li>
-                        <a href="https://orcid.org/0009-0004-0126-6692" target="_blank"><img src="img/orcid.svg" style="height:1rem;"></a>
-                    </li>
+                    <li><a href="https://orcid.org/0009-0004-0126-6692" title=""><i class="bi bi-person-badge" itemprop="sameAs" target="_blank"></i></a></li>
+                    <!-- <li>
+                        <a href="https://orcid.org/0009-0004-0126-6692" target="_blank"><img src="img/orcid.svg" style="height:1em;"></a>
+                    </li> -->
                 </ul>
             </section>
         </div>
