--- a/thoughts/post.html
+++ b/thoughts/post.html
@@ -185,6 +185,8 @@
 
         <p style="margin-top: 3em; padding-top: 2em; padding-bottom: 3em; border-top: 1pt solid #ddd; color: #999; text-align: center;">
             <a href="../thoughts.html" data-i18n="post.backToThoughts">← Back to all thoughts</a>
+            <br>
+            Libertas perfundet omnia luce
         </p>
     </div>
 
